# vouch_dev

./: .gitignore  AGENTS.md  AUDIT_FINDINGS.md  AUDIT_REPORT.md  AUDIT_REPORT_2024.md  AUDIT_REPORT_2025.md  AUDIT_REPORT_2025_OCT.md  AUDIT_REPORT_2026.md  AUDIT_REPORT_2027.md  AUDIT_REPORT_FINAL.md  AUDIT_REPORT_FULL.md  AUDIT_REPORT_JULES.md  AUDIT_SUMMARY.md  BACKGROUND.md  EU_AI_Act_plan.md  LEGAL.md  LICENSE  QUICKSTART.md  README.md  REPORT.md  SECURITY.md  TUTORIAL.md  debug_wrapping.py  module_b.py  privacy_plan.md  prov_plan.md  pyproject.toml  random_data.csv  requirements.txt  setup.py  test_cross_library.py  test_cross_module.py  test_global_patch.py  test_inner_import.py
docs/: KEY_MANAGEMENT.md  LIMITATIONS.md
examples/: CAPTURE_WALKTHROUGH.md  DECORATOR_WALKTHROUGH.md  DIFF_WALKTHROUGH.md  INSPECTION_WALKTHROUGH.md  REPORTING_WALKTHROUGH.md  RERUN_WALKTHROUGH.md  TIMESTAMP_WALKTHROUGH.md  auto_audit_example.py  capture_artifacts_example.py  decorator_example.py  generate_report_example.py  inspect_vch.py  modes_example.py  quickstart.py  rerun_verification.py  simplified_workflow.py  test_function_calls.py  timestamp_example.py
tests/: dummy_utils.py  fake_lib.py  test_artifact_capture.py  test_audit_correctness.py  test_audit_fixes.py  test_audit_improvements.py  test_audit_report_fixes.py  test_auditor.py  test_auditor_operators.py  test_auto_audit.py  test_benchmark.py  test_compliance_features.py  test_concurrency.py  test_constructor_audit.py  test_constructor_operators.py  test_crash_resilience.py  test_crypto.py  test_crypto_encryption.py  (+34 more)
(+15 files in other folders)
